fix: refactoring functions and code comments

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -29,7 +29,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime as dt\n",
-    "from cosc428_track_location.tools import consistent_scale_plot"
+    "from track_location.track_tools import consistent_scale_plot"
    ]
   },
   {
@@ -875,7 +875,7 @@
    ],
    "source": [
     "# visualisation here https://www.desmos.com/calculator/sikussppqz\n",
-    "from cosc428_track_location.track import Track\n",
+    "from track_location.track import Track\n",
     "\n",
     "track = Track()\n",
     "print(track.project(30, 70))\n",
@@ -965,7 +965,7 @@
     }
    ],
    "source": [
-    "from optimisation import track_location, estimate_track_location\n",
+    "from track_location.optimisation import track_location, estimate_track_location\n",
     "\n",
     "initial_est = estimate_track_location(points)\n",
     "\n",
@@ -1226,7 +1226,7 @@
     }
    ],
    "source": [
-    "from cosc428_track_location.tools import rotate_points\n",
+    "from track_location.track_tools import rotate_points\n",
     "\n",
     "norm_points = rotate_points((\n",
     "                                points\n",
