--- a/inference.ipynb
+++ b/inference.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "      <td>171.0</td>\n",
        "      <td>-305.026780</td>\n",
        "      <td>-238.728933</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>239.0</td>\n",
        "      <td>-30.682623</td>\n",
        "      <td>-61.964335</td>\n",
        "      <td>326.359371</td>\n",
@@ -103,7 +103,7 @@
        "      <td>172.0</td>\n",
        "      <td>-288.644511</td>\n",
        "      <td>-216.986970</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>247.0</td>\n",
        "      <td>-31.221627</td>\n",
        "      <td>-61.101612</td>\n",
        "      <td>300.94316</td>\n",
@@ -115,7 +115,7 @@
        "      <td>174.0</td>\n",
        "      <td>-275.583317</td>\n",
        "      <td>-201.384275</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>253.0</td>\n",
        "      <td>-31.605895</td>\n",
        "      <td>-60.451982</td>\n",
        "      <td>281.756798</td>\n",
@@ -127,7 +127,7 @@
        "      <td>174.0</td>\n",
        "      <td>-270.658626</td>\n",
        "      <td>-199.316910</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>255.0</td>\n",
        "      <td>-31.566554</td>\n",
        "      <td>-60.519919</td>\n",
        "      <td>276.459081</td>\n",
@@ -139,7 +139,7 @@
        "      <td>174.0</td>\n",
        "      <td>-249.872221</td>\n",
        "      <td>-199.467772</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>261.0</td>\n",
        "      <td>-30.890518</td>\n",
        "      <td>-61.637887</td>\n",
        "      <td>258.747102</td>\n",
@@ -163,7 +163,7 @@
        "      <td>170.0</td>\n",
        "      <td>-596.542734</td>\n",
        "      <td>-108.329079</td>\n",
-       "      <td>1808.0</td>\n",
+       "      <td>2047.0</td>\n",
        "      <td>-36.277746</td>\n",
        "      <td>-46.216833</td>\n",
        "      <td>563.697426</td>\n",
@@ -175,7 +175,7 @@
        "      <td>170.0</td>\n",
        "      <td>-618.092194</td>\n",
        "      <td>-106.227954</td>\n",
-       "      <td>1814.0</td>\n",
+       "      <td>2053.0</td>\n",
        "      <td>-36.305695</td>\n",
        "      <td>-45.956188</td>\n",
        "      <td>584.900177</td>\n",
@@ -187,7 +187,7 @@
        "      <td>170.0</td>\n",
        "      <td>-639.114877</td>\n",
        "      <td>-107.815189</td>\n",
-       "      <td>1820.0</td>\n",
+       "      <td>2059.0</td>\n",
        "      <td>-36.309119</td>\n",
        "      <td>-45.922986</td>\n",
        "      <td>605.974774</td>\n",
@@ -199,7 +199,7 @@
        "      <td>169.0</td>\n",
        "      <td>-658.967216</td>\n",
        "      <td>-110.225405</td>\n",
-       "      <td>1826.0</td>\n",
+       "      <td>2065.0</td>\n",
        "      <td>-36.307031</td>\n",
        "      <td>-45.943262</td>\n",
        "      <td>625.969568</td>\n",
@@ -211,7 +211,7 @@
        "      <td>169.0</td>\n",
        "      <td>-668.368306</td>\n",
        "      <td>-108.558270</td>\n",
-       "      <td>1830.0</td>\n",
+       "      <td>2069.0</td>\n",
        "      <td>-36.321397</td>\n",
        "      <td>-45.801405</td>\n",
        "      <td>635.154879</td>\n",
@@ -236,22 +236,22 @@
        "226 2021-04-05 23:48:35+00:00  3.368   169.0 -668.368306 -108.558270   \n",
        "\n",
        "     time_after_start    track_x    track_y dist_to_track  \n",
-       "0                 0.0 -30.682623 -61.964335    326.359371  \n",
-       "1                 8.0 -31.221627 -61.101612     300.94316  \n",
-       "2                14.0 -31.605895 -60.451982    281.756798  \n",
-       "3                16.0 -31.566554 -60.519919    276.459081  \n",
-       "4                22.0 -30.890518 -61.637887    258.747102  \n",
+       "0               239.0 -30.682623 -61.964335    326.359371  \n",
+       "1               247.0 -31.221627 -61.101612     300.94316  \n",
+       "2               253.0 -31.605895 -60.451982    281.756798  \n",
+       "3               255.0 -31.566554 -60.519919    276.459081  \n",
+       "4               261.0 -30.890518 -61.637887    258.747102  \n",
        "..                ...        ...        ...           ...  \n",
-       "222            1808.0 -36.277746 -46.216833    563.697426  \n",
-       "223            1814.0 -36.305695 -45.956188    584.900177  \n",
-       "224            1820.0 -36.309119 -45.922986    605.974774  \n",
-       "225            1826.0 -36.307031 -45.943262    625.969568  \n",
-       "226            1830.0 -36.321397 -45.801405    635.154879  \n",
+       "222            2047.0 -36.277746 -46.216833    563.697426  \n",
+       "223            2053.0 -36.305695 -45.956188    584.900177  \n",
+       "224            2059.0 -36.309119 -45.922986    605.974774  \n",
+       "225            2065.0 -36.307031 -45.943262    625.969568  \n",
+       "226            2069.0 -36.321397 -45.801405    635.154879  \n",
        "\n",
        "[227 rows x 9 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "8          2068.467 -668.368318 -108.558194  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -562,6 +562,8 @@
    ],
    "source": [
     "def predictor_200m(points):\n",
+    "    \"\"\"Simple predictor for demonstration purposes\n",
+    "    Outputs any GPS points that are close to the 200m mark\"\"\"\n",
     "    points_at_200m = points[(points.track_x == 36.5) & (points.track_y > 35) & (points.track_y < 55)]\n",
     "    return points_at_200m.time_after_start.values\n",
     "\n",
@@ -573,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "135.3531449999986"
+       "13.621444444444402"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
