feat: dataloaders for models

--- a/references/references.bib
+++ b/references/references.bib
@@ -406,4 +406,42 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
   urldate  = {2023-04-14},
 }
 
+'
+@TechReport{Snyder1987,
+  author       = {John P. Snyder},
+  institution  = {U.S Geological Survey},
+  title        = {Map projections: {A} working manual},
+  year         = {1987},
+  address      = {Washington, D.C.},
+  type         = {{USGS} {Numbered} {Series}},
+  abstract     = {After decades of using only one map projection, the Polyconic, for its mapping program, the U.S. Geological Survey (USGS) now uses several of the more common projections for its published maps. For larger scale maps, including topographic quadrangles and the State Base Map Series, conformal projections such as the Transverse Mercator and the Lambert Conformal Conic are used. Equal-area and equidistant projections appear in the National Atlas. Other projections, such as the Miller Cylindrical and the Van der Grinten, are chosen occasionally for convenience, sometimes making use of existing base maps prepared by others. Some projections treat the Earth only as a sphere, others as either ellipsoid or sphere. The USGS has also conceived and designed several new projections, including the Space Oblique Mercator, the first map projection designed to permit mapping of the Earth continuously from a satellite with low distortion. The mapping of extraterrestrial bodies has resulted in the use of standard projections in completely new settings. Several other projections which have not been used by the USGS are frequently of interest to the cartographic public. With increased computerization, it is important to realize that rectangular coordinates for all these projections may be mathematically calculated with formulas which would have seemed too complicated in the past, but which now may be programmed routinely, especially if aided by numerical examples. A discussion of appearance, usage, and history is given together with both forward and inverse equations for each projection involved.},
+  collaborator = {Snyder, John P.},
+  doi          = {10.3133/pp1395},
+  journal      = {Map projections: A working manual},
+  school       = {U.S. Government Printing Office},
+  series       = {Professional {Paper}},
+  shorttitle   = {Map projections},
+  url          = {http://pubs.er.usgs.gov/publication/pp1395},
+  urldate      = {2023-05-26},
+}
+
+'
+@Article{Wu2018,
+  author   = {Wu, Shaoen and Xu, Junhong and Zhu, Shangyue and Guo, Hanqing},
+  journal  = {Signal Processing},
+  title    = {A {Deep} {Residual} convolutional neural network for facial keypoint detection with missing labels},
+  year     = {2018},
+  issn     = {0165-1684},
+  month    = mar,
+  pages    = {384--391},
+  volume   = {144},
+  abstract = {Keypoint detection is critical in image recognitions. Deep learning such as convolutional neural network (CNN) has recently demonstrated its tremendous success in detecting image keypoints over conventional image processing methodologies. The deep learning solutions, however, heavily rely on labeling target images for their reliability and accuracy. Unfortunately, most image datasets do not have all labels marked. To address this problem, this paper presents an effective and novel deep learning solution, Masked Loss Residual Convolutional Neural Network (ML-ResNet), to facial keypoint detection on the datasets that have missing target labels. The core of ML-ResNet is a masked loss objective function that ignores the error in predicting the missing target keypoints in the output layer of a CNN. To compensate for the loss induced by the masked loss objective function that likely results in overfitting, ML-ResNet is designed of a data augmentation strategy to increase the number of training data. The performance of ML-ResNet has been evaluated on the image dataset from Kaggle Facial Keypoints Detection competition, which consists of 7049 training images, but with only 2140 images that have full target keypoints labeled. In the experiments, ML-ResNet is compared to a pioneer literature CNN facial keypoint detection work. The experiment results clearly show that the proposed ML-ResNet is robust and advantageous in training CNNs on datasets with missing target values. ML-ResNet can improve the learning time by 30\% during the training and the detection accuracy by eight times in facial keypoint detection.},
+  doi      = {10.1016/j.sigpro.2017.11.003},
+  file     = {ScienceDirect Full Text PDF:https\://www.sciencedirect.com/science/article/pii/S0165168417303924/pdfft?md5=9dca069542f86ff3914107b74ecfe858&pid=1-s2.0-S0165168417303924-main.pdf&isDTMRedir=Y:application/pdf},
+  keywords = {Deep learning, Facial keypoint detection},
+  language = {en},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0165168417303924},
+  urldate  = {2023-04-25},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
