wip: pca track location

--- a/references/references.bib
+++ b/references/references.bib
@@ -22,6 +22,7 @@
   author       = {Gavin Francis},
   howpublished = {science4performance},
   month        = aug,
+  note         = {Accessed March 2, 2023},
   title        = {Strava – {Automatic} {Lap} {Detection}},
   year         = {2018},
   abstract     = {As you upload your data, you accumulate a growing history of rides. It is helpful to find ways of classifying different types of activities. Races and training sessions often include laps that are …},
@@ -442,6 +443,23 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
   language = {en},
   url      = {https://www.sciencedirect.com/science/article/pii/S0165168417303924},
   urldate  = {2023-04-25},
+}
+
+@Article{Dumas2022,
+  author        = {Dumas, Joe},
+  journal       = {International Journal of Computer Science and Information Technology, Volume 14, Number 1, February 2022},
+  title         = {Accuracy of Garmin GPS Running Watches over Repetitive Trials on the Same Route},
+  year          = {2022},
+  month         = mar,
+  abstract      = {Many runners use watches incorporating Global Positioning System technology to track their workouts. These devices can be valuable training aids, but they have limitations. For several reasons including variations in satellite position, environmental factors, and design decisions made by the manufacturer, GPS-enabled watches can produce position measurement errors. These can result in incorrect estimations of total distance covered as well as running pace. This study examined the accuracy of three Garmin running watches of different technological generations using repetitive trials, over several years, by the same runner over the same route. The older watches, a Forerunner 205 and a Forerunner 220, showed similar accuracy when traversing the route. The newer generation watch, a Forerunner 45S, was found to be significantly less accurate in terms of both the trueness and precision of its distance measurements. This may indicate that Garmin, in competition with other manufacturers of similar devices, has chosen in recent years to prioritize device miniaturization and battery life over accuracy.},
+  archiveprefix = {arXiv},
+  copyright     = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International},
+  doi           = {10.48550/ARXIV.2203.00491},
+  eprint        = {2203.00491},
+  file          = {:http\://arxiv.org/pdf/2203.00491v1:PDF},
+  keywords      = {Other Computer Science (cs.OH), FOS: Computer and information sciences},
+  primaryclass  = {cs.OH},
+  publisher     = {arXiv},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
