--- a/track_location/track_references/references.bib
+++ b/track_location/track_references/references.bib
@@ -1,18 +1,19 @@
 '
 @TechReport{He2015,
-  author   = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  title    = {Deep {Residual} {Learning} for {Image} {Recognition}},
-  year     = {2015},
-  month    = dec,
-  note     = {arXiv:1512.03385 [cs] type: article},
-  abstract = {Deeper neural networks are more difficult to train. We present a residual learning framework to ease the training of networks that are substantially deeper than those used previously. We explicitly reformulate the layers as learning residual functions with reference to the layer inputs, instead of learning unreferenced functions. We provide comprehensive empirical evidence showing that these residual networks are easier to optimize, and can gain accuracy from considerably increased depth. On the ImageNet dataset we evaluate residual nets with a depth of up to 152 layers---8x deeper than VGG nets but still having lower complexity. An ensemble of these residual nets achieves 3.57\% error on the ImageNet test set. This result won the 1st place on the ILSVRC 2015 classification task. We also present analysis on CIFAR-10 with 100 and 1000 layers. The depth of representations is of central importance for many visual recognition tasks. Solely due to our extremely deep representations, we obtain a 28\% relative improvement on the COCO object detection dataset. Deep residual nets are foundations of our submissions to ILSVRC \& COCO 2015 competitions, where we also won the 1st places on the tasks of ImageNet detection, ImageNet localization, COCO detection, and COCO segmentation.},
-  annote   = {Comment: Tech report},
-  doi      = {10.48550/arXiv.1512.03385},
-  file     = {:He2015 - Deep Residual Learning for Image Recognition.pdf:PDF},
-  keywords = {Computer Science - Computer Vision and Pattern Recognition},
-  school   = {arXiv},
-  url      = {http://arxiv.org/abs/1512.03385},
-  urldate  = {2023-04-19},
+  author      = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  institution = {Microsoft Research},
+  title       = {Deep {Residual} {Learning} for {Image} {Recognition}},
+  year        = {2015},
+  month       = dec,
+  note        = {arXiv:1512.03385 [cs] type: article},
+  abstract    = {Deeper neural networks are more difficult to train. We present a residual learning framework to ease the training of networks that are substantially deeper than those used previously. We explicitly reformulate the layers as learning residual functions with reference to the layer inputs, instead of learning unreferenced functions. We provide comprehensive empirical evidence showing that these residual networks are easier to optimize, and can gain accuracy from considerably increased depth. On the ImageNet dataset we evaluate residual nets with a depth of up to 152 layers---8x deeper than VGG nets but still having lower complexity. An ensemble of these residual nets achieves 3.57\% error on the ImageNet test set. This result won the 1st place on the ILSVRC 2015 classification task. We also present analysis on CIFAR-10 with 100 and 1000 layers. The depth of representations is of central importance for many visual recognition tasks. Solely due to our extremely deep representations, we obtain a 28\% relative improvement on the COCO object detection dataset. Deep residual nets are foundations of our submissions to ILSVRC \& COCO 2015 competitions, where we also won the 1st places on the tasks of ImageNet detection, ImageNet localization, COCO detection, and COCO segmentation.},
+  annote      = {Comment: Tech report},
+  doi         = {10.48550/arXiv.1512.03385},
+  file        = {:He2015 - Deep Residual Learning for Image Recognition.pdf:PDF},
+  keywords    = {Computer Science - Computer Vision and Pattern Recognition},
+  school      = {arXiv},
+  url         = {http://arxiv.org/abs/1512.03385},
+  urldate     = {2023-04-19},
 }
 
 @Misc{garminGPSAccuracy,
@@ -28,18 +29,19 @@
 
 '
 @TechReport{Dumas2022,
-  author   = {Dumas, Joe},
-  title    = {Accuracy of {Garmin} {GPS} {Running} {Watches} over {Repetitive} {Trials} on the {Same} {Route}},
-  year     = {2022},
-  month    = mar,
-  note     = {arXiv:2203.00491 [cs] type: article},
-  abstract = {Many runners use watches incorporating Global Positioning System technology to track their workouts. These devices can be valuable training aids, but they have limitations. For several reasons including variations in satellite position, environmental factors, and design decisions made by the manufacturer, GPS-enabled watches can produce position measurement errors. These can result in incorrect estimations of total distance covered as well as running pace. This study examined the accuracy of three Garmin running watches of different technological generations using repetitive trials, over several years, by the same runner over the same route. The older watches, a Forerunner 205 and a Forerunner 220, showed similar accuracy when traversing the route. The newer generation watch, a Forerunner 45S, was found to be significantly less accurate in terms of both the trueness and precision of its distance measurements. This may indicate that Garmin, in competition with other manufacturers of similar devices, has chosen in recent years to prioritize device miniaturization and battery life over accuracy.},
-  doi      = {10.48550/arXiv.2203.00491},
-  file     = {:Dumas2022 - Accuracy of Garmin GPS Running Watches Over Repetitive Trials on the Same Route.pdf:PDF},
-  keywords = {Computer Science - Other Computer Science},
-  school   = {arXiv},
-  url      = {http://arxiv.org/abs/2203.00491},
-  urldate  = {2023-04-19},
+  author      = {Dumas, Joe},
+  institution = {University of Tennessee},
+  title       = {Accuracy of {Garmin} {GPS} {Running} {Watches} over {Repetitive} {Trials} on the {Same} {Route}},
+  year        = {2022},
+  month       = mar,
+  note        = {arXiv:2203.00491 [cs] type: article},
+  abstract    = {Many runners use watches incorporating Global Positioning System technology to track their workouts. These devices can be valuable training aids, but they have limitations. For several reasons including variations in satellite position, environmental factors, and design decisions made by the manufacturer, GPS-enabled watches can produce position measurement errors. These can result in incorrect estimations of total distance covered as well as running pace. This study examined the accuracy of three Garmin running watches of different technological generations using repetitive trials, over several years, by the same runner over the same route. The older watches, a Forerunner 205 and a Forerunner 220, showed similar accuracy when traversing the route. The newer generation watch, a Forerunner 45S, was found to be significantly less accurate in terms of both the trueness and precision of its distance measurements. This may indicate that Garmin, in competition with other manufacturers of similar devices, has chosen in recent years to prioritize device miniaturization and battery life over accuracy.},
+  doi         = {10.48550/arXiv.2203.00491},
+  file        = {:Dumas2022 - Accuracy of Garmin GPS Running Watches Over Repetitive Trials on the Same Route.pdf:PDF},
+  keywords    = {Computer Science - Other Computer Science},
+  school      = {arXiv},
+  url         = {http://arxiv.org/abs/2203.00491},
+  urldate     = {2023-04-19},
 }
 
 @Misc{DepartmentofLocalGovernment2023,
@@ -172,19 +174,20 @@
 
 '
 @TechReport{He2018,
-  author   = {He, Kaiming and Gkioxari, Georgia and Dollár, Piotr and Girshick, Ross},
-  title    = {Mask {R}-{CNN}},
-  year     = {2018},
-  month    = jan,
-  note     = {arXiv:1703.06870 [cs] type: article},
-  abstract = {We present a conceptually simple, flexible, and general framework for object instance segmentation. Our approach efficiently detects objects in an image while simultaneously generating a high-quality segmentation mask for each instance. The method, called Mask R-CNN, extends Faster R-CNN by adding a branch for predicting an object mask in parallel with the existing branch for bounding box recognition. Mask R-CNN is simple to train and adds only a small overhead to Faster R-CNN, running at 5 fps. Moreover, Mask R-CNN is easy to generalize to other tasks, e.g., allowing us to estimate human poses in the same framework. We show top results in all three tracks of the COCO suite of challenges, including instance segmentation, bounding-box object detection, and person keypoint detection. Without bells and whistles, Mask R-CNN outperforms all existing, single-model entries on every task, including the COCO 2016 challenge winners. We hope our simple and effective approach will serve as a solid baseline and help ease future research in instance-level recognition. Code has been made available at: https://github.com/facebookresearch/Detectron},
-  annote   = {Comment: open source; appendix on more results},
-  doi      = {10.48550/arXiv.1703.06870},
-  file     = {:He2018 - Mask R CNN.pdf:PDF},
-  keywords = {Computer Science - Computer Vision and Pattern Recognition},
-  school   = {arXiv},
-  url      = {http://arxiv.org/abs/1703.06870},
-  urldate  = {2023-04-29},
+  author      = {He, Kaiming and Gkioxari, Georgia and Dollár, Piotr and Girshick, Ross},
+  institution = {Facebook AI Research},
+  title       = {Mask {R}-{CNN}},
+  year        = {2018},
+  month       = jan,
+  note        = {arXiv:1703.06870 [cs] type: article},
+  abstract    = {We present a conceptually simple, flexible, and general framework for object instance segmentation. Our approach efficiently detects objects in an image while simultaneously generating a high-quality segmentation mask for each instance. The method, called Mask R-CNN, extends Faster R-CNN by adding a branch for predicting an object mask in parallel with the existing branch for bounding box recognition. Mask R-CNN is simple to train and adds only a small overhead to Faster R-CNN, running at 5 fps. Moreover, Mask R-CNN is easy to generalize to other tasks, e.g., allowing us to estimate human poses in the same framework. We show top results in all three tracks of the COCO suite of challenges, including instance segmentation, bounding-box object detection, and person keypoint detection. Without bells and whistles, Mask R-CNN outperforms all existing, single-model entries on every task, including the COCO 2016 challenge winners. We hope our simple and effective approach will serve as a solid baseline and help ease future research in instance-level recognition. Code has been made available at: https://github.com/facebookresearch/Detectron},
+  annote      = {Comment: open source; appendix on more results},
+  doi         = {10.48550/arXiv.1703.06870},
+  file        = {:He2018 - Mask R CNN.pdf:PDF},
+  keywords    = {Computer Science - Computer Vision and Pattern Recognition},
+  school      = {arXiv},
+  url         = {http://arxiv.org/abs/1703.06870},
+  urldate     = {2023-04-29},
 }
 
 @Misc{PyTorch2023a,
