--- a/references/references.bib
+++ b/references/references.bib
@@ -468,6 +468,7 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
 @TechReport{He2015,
   author        = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   title         = {Deep {Residual} {Learning} for {Image} {Recognition}},
+  institution   = {Microsoft Research},
   year          = {2015},
   month         = dec,
   note          = {arXiv:1512.03385 [cs] type: article},
@@ -617,9 +618,10 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
 
 '
 
-@TechReport{He2018,
+@Article{He2018,
   author        = {He, Kaiming and Gkioxari, Georgia and Dollár, Piotr and Girshick, Ross},
   title         = {Mask {R}-{CNN}},
+  journal       = {arXiv},
   year          = {2018},
   month         = jan,
   note          = {arXiv:1703.06870 [cs] type: article},
@@ -764,6 +766,55 @@ https://www.sciencedirect.com/science/article/pii/S0968090X21002771},
   language      = {en},
   url           = {https://www.sciencedirect.com/science/article/pii/S0031320319301025},
   urldate       = {2023-05-02},
+}
+
+@Misc{Saxton2023,
+  author       = {Athletics Nelson},
+  title        = {Run, Jump, Throw | Athletics at Saxton Field},
+  howpublished = {Website},
+  year         = {2023},
+  url          = {https://www.saxtonfield.co.nz/sport/athletics/},
+}
+
+@Misc{WorldAthletics2023,
+  author       = {World Athletics},
+  title        = {IAAF Track and Field Facilities Manual},
+  howpublished = {Website},
+  year         = {2008},
+  url          = {https://worldathletics.org/about-iaaf/documents/technical-information},
+}
+
+@TechReport{Priya2022,
+  author      = {Bala Priya},
+  title       = {Regularization in Neural Networks},
+  institution = {Pinecone},
+  year        = {2022},
+  type        = {techreport},
+  url         = {https://www.pinecone.io/learn/regularization-in-neural-networks/#L1-and-L2-Regularization},
+}
+
+@Article{s21248309,
+  author         = {Lee, Inwoong and Kim, Doyoung and Wee, Dongyoon and Lee, Sanghoon},
+  title          = {An Efficient Human Instance-Guided Framework for Video Action Recognition},
+  journal        = {Sensors},
+  year           = {2021},
+  volume         = {21},
+  number         = {24},
+  issn           = {1424-8220},
+  abstract       = {In recent years, human action recognition has been studied by many computer vision researchers. Recent studies have attempted to use two-stream networks using appearance and motion features, but most of these approaches focused on clip-level video action recognition. In contrast to traditional methods which generally used entire images, we propose a new human instance-level video action recognition framework. In this framework, we represent the instance-level features using human boxes and keypoints, and our action region features are used as the inputs of the temporal action head network, which makes our framework more discriminative. We also propose novel temporal action head networks consisting of various modules, which reflect various temporal dynamics well. In the experiment, the proposed models achieve comparable performance with the state-of-the-art approaches on two challenging datasets. Furthermore, we evaluate the proposed features and networks to verify the effectiveness of them. Finally, we analyze the confusion matrix and visualize the recognized actions at human instance level when there are several people.},
+  article-number = {8309},
+  doi            = {10.3390/s21248309},
+  pubmedid       = {34960404},
+  url            = {https://www.mdpi.com/1424-8220/21/24/8309},
+}
+
+@Misc{Virgolin2021,
+  author      = {Marco Virgolin},
+  title       = {Time complexity for different machine learning algorithms},
+  month       = feb,
+  year        = {2021},
+  institution = {GitHub},
+  url         = {https://marcovirgolin.github.io/extras/details_time_complexity_machine_learning_algorithms/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
