remove unnecessary files for privacy, and refactor inference

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,52 +650,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted: [ 493.  921.  931. 1256. 1394. 1520. 1523. 1651. 1654.]\n",
+      "Predicted: [1236.5, 1266.5, 1379.5, 1402.5, 1508.75, 1531.5, 1637.5, 1664.0]\n",
       "Actual:    [1237.247 1266.987 1373.799 1403.034 1502.306 1532.242 1633.241 1661.735\n",
       " 2068.467]\n"
      ]
     }
    ],
    "source": [
-    "def predictor_200m(points):\n",
-    "    \"\"\"Simple predictor for demonstration purposes\n",
-    "    Outputs any GPS points that are close to the 200m mark\"\"\"\n",
-    "    points_at_200m = points[(points.track_x <= 32) & (points.track_x <= 36.5) & (points.track_y > 35) & (points.track_y < 55)]\n",
-    "    return points_at_200m.time_after_start.values\n",
+    "from models import Acceleration, SlidingWindow\n",
     "\n",
+    "# model = Acceleration()\n",
+    "model = SlidingWindow()\n",
     "\n",
-    "pred = predictor_200m(points)\n",
+    "if model.requires_training:\n",
+    "    model.load(\"sliding_window_model.pkl\")\n",
+    "\n",
+    "pred = model.predict(points, events=events)\n",
     "print(\"Predicted:\", pred)\n",
     "print(\"Actual:   \", laps.time_after_start.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "167.41288888888877"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IoU error: 0.288488867835147\n",
+      "Precision error: 47.29400000000002\n",
+      "Recall error: 2.6473750000000678\n"
+     ]
     }
    ],
    "source": [
-    "from eval import evaluate\n",
+    "from eval import iou, evaluate\n",
     "\n",
-    "evaluate(laps.time_after_start.values, pred)"
+    "print(f\"IoU error: {iou(laps.time_after_start.values, pred)}\")\n",
+    "precision_recall = evaluate(laps.time_after_start.values, pred)\n",
+    "print(f\"Precision error: {precision_recall[0]}\")\n",
+    "print(f\"Recall error: {precision_recall[1]}\")"
    ]
   }
  ],
